# Paracl

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/codegen/include/: codegen.h
lib/lexer/include/: lexer.h
lib/lexer/src/: lexer.cpp
lib/parser/include/: parser.h
src/: CMakeLists.txt  paracl.cpp
stdlib/: runtime.asm
unittests/: CMakeLists.txt
unittests/codegen/code_snippets/: basic.paracl  for_loop.paracl  if_else.paracl  postfix_local.paracl  print_int.paracl  redefine_print_int.paracl  scan_int.paracl  undefined_function.paracl  wrong_arg_count.paracl
unittests/codegen/src/: codegen_test.cpp
unittests/lexer/code_snippets/: all_tokens.paracl
unittests/lexer/src/: generate_token_list.cpp  lexer_test.cpp
unittests/parser/code_snippets/: basic.paracl  invalid_else.paracl
unittests/parser/src/: parser_test.cpp
